# functr

./: .gitignore  README.md  pyproject.toml
examples/: run_classification_criteo.py  run_dien.py  run_din.py  run_multitask_learning.py  run_multivalue_movielens.py  run_regression_movielens.py
src/funrec/inputs/: __init__.py  core.py
src/funrec/layers/: activation.py  interaction.py
src/funrec/layers/sequence/: __init__.py  attention.py  core.py  gru.py
src/funrec/models/: __init__.py  afm.py  afn.py  autoint.py  ccpm.py  dcn.py  dcnmix.py  deepfm.py  dien.py  difm.py  din.py  fibinet.py  ifm.py  mlr.py  nfm.py  onn.py  pnn.py  wdl.py  xdeepfm.py
src/funrec/models/b2000/: base.py
src/funrec/models/b2000/empty/: core.py
src/funrec/models/base/: basemodel.py
src/funrec/models/multitask/: esmm.py  mmoe.py  ple.py  sharedbottom.py
src/funrec/models/p2015/: __init__.py
src/funrec/models/p2015/ccpm/: __init__.py  code.py
src/funrec/models/p2016/: __init__.py
src/funrec/models/p2016/pnn/: __init__.py  code.py
src/funrec/models/p2016/wdl/: __init__.py  code.py
src/funrec/models/p2017/: __init__.py
src/funrec/models/p2017/afm/: __init__.py  code.py
src/funrec/models/p2017/dcn/: __init__.py  code.py
src/funrec/models/p2017/dcnmix/: __init__.py  code.py
src/funrec/models/p2017/deepfm/: __init__.py  code.py
src/funrec/models/p2017/mlr/: __init__.py  code.py
src/funrec/models/p2017/nfm/: __init__.py  code.py
src/funrec/models/p2018/: __init__.py
src/funrec/models/p2019/: __init__.py
src/funrec/models/p2020/: __init__.py
(+33 files in other folders)
