[project]
name = "funrec"
version = "0.0.4"
description = "funrec"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [ "funutil>=1.0.53", "scikit-learn>=1.6.0", "torch>=2.5.0", "tqdm>=4.67.0",]
[[project.authors]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.authors]]
name = "farfarfun"
email = "farfarfun@qq.com"

[[project.maintainers]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.maintainers]]
name = "farfarfun"
email = "farfarfun@qq.com"

[project.urls]
Organization = "https://github.com/farfarfun"
Repository = "https://github.com/farfarfun/funrec"
Releases = "https://github.com/farfarfun/funrec/releases"

[tool.setuptools]
license-files = []
